# stock-fupan

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/cli/: __init__.py  generate_report.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/providers/: __init__.py  factory.py  llm.py  market.py  news.py  ocr.py  review_sources.py  ths_concepts.py  tickflow.py
apps/api/app/renderers/: __init__.py  html_renderer.py  png_exporter.py
apps/api/app/rules/: __init__.py  scoring.py  validation.py
apps/api/app/schemas/: __init__.py  report.py  structured_review.py
apps/api/app/services/: __init__.py  assets.py  next_day_prediction.py  report_generator.py  structured_review_builder.py  structured_review_generator.py  theme_history.py  trading_calendar.py  watchlist_observation.py
apps/api/app/watchlist/: __init__.py  ocr_service.py  parser.py  service.py  storage.py
apps/api/tests/: test_assets.py  test_generate_report_cli.py  test_llm_provider.py  test_next_day_prediction.py  test_ocr_provider.py  test_real_providers.py  test_report_api.py  test_review_sources.py  test_scoring.py  test_structured_review.py  test_tickflow_provider.py  test_trading_calendar.py  test_validation.py  test_watchlist_api.py  test_watchlist_observation.py  test_watchlist_ocr_api.py  test_watchlist_parser.py
apps/api/tests/fixtures/: 10jqka_fupan_sample.html  eastmoney_ztfp_sample.html
apps/web/: .gitignore  package.json  (+1 more)
(+57 files in other folders)
